# auto_code_transformer

./: AUTHORS.rst  CONTRIBUTING.rst  LICENSE  Makefile  README.rst  setup.cfg  setup.py  test_requirements.txt  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: tests.yml
auto_code_transformer/: __init__.py
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
src/: auto_code_transformer.py  cli.py  exceptions.py  process_file.py  transformer.py
staticdata/: assignments.py  example.py  model_store_example.py  post_transform.py
tests/: __init__.py  helper.py  test_auto_code_transformer.py  test_cli.py  test_process_python_file.py
